# rust-wasm-node

./: readme.md
node/: index.ts  package-lock.json  package.json
rust/: Cargo.toml
rust/src/: lib.rs
