[package]
name = "rust-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
reqwest = { version = "0.11", features = ["json"] }
image = "0.23"
serde_json = "1.0"
base64 = "0.13"
serde-wasm-bindgen = "0.5"

[lib]
crate-type = ["cdylib"]